# foglamp-south-usb4704

./: CMakeLists.txt  Description  Package  README.rst  make_deb  plugin.cpp  requirements.sh  usb4704.cpp
include/: usb4704.h
